// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<style>
.S1 {
  padding-bottom: 3px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-left: 5px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-bottom: 1px;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,131,71,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: #008347;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="#008347"
  title="swimming"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1habvwh r-flexDirection-18u37iz r-marginBottom-10sqg0u r-marginTop-19i43ro S3"
  >
    <div
      className="css-view-1dbjc4n r-paddingBottom-3hmvjm S1"
    >
      <IconVideo
        fillColour="#008347"
        height={9}
      />
    </div>
    <div
      className="css-text-901oao r-flex-13awgt0 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-19r33im r-lineHeight-56xrmm r-marginLeft-1f6r7vd r-paddingTop-njp1lv IS2 S2"
    >
      SWIMMING
    </div>
  </div>
</VideoLabel>
`;

exports[`2. video label without a title shows video 1`] = `
<style>
.S1 {
  padding-bottom: 3px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-left: 5px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-bottom: 1px;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,131,71,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: #008347;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="#008347"
  title=""
>
  <div
    className="css-view-1dbjc4n r-alignItems-1habvwh r-flexDirection-18u37iz r-marginBottom-10sqg0u r-marginTop-19i43ro S3"
  >
    <div
      className="css-view-1dbjc4n r-paddingBottom-3hmvjm S1"
    >
      <IconVideo
        fillColour="#008347"
        height={9}
      />
    </div>
    <div
      className="css-text-901oao r-flex-13awgt0 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-19r33im r-lineHeight-56xrmm r-marginLeft-1f6r7vd r-paddingTop-njp1lv IS2 S2"
    >
      VIDEO
    </div>
  </div>
</VideoLabel>
`;

exports[`3. video label with the black default colour 1`] = `
<style>
.S1 {
  padding-bottom: 3px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-left: 5px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-bottom: 1px;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,0,0,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: black;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="black"
  title=""
>
  <div
    className="css-view-1dbjc4n r-alignItems-1habvwh r-flexDirection-18u37iz r-marginBottom-10sqg0u r-marginTop-19i43ro S3"
  >
    <div
      className="css-view-1dbjc4n r-paddingBottom-3hmvjm S1"
    >
      <IconVideo
        fillColour="black"
        height={9}
      />
    </div>
    <div
      className="css-text-901oao r-flex-13awgt0 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-19r33im r-lineHeight-56xrmm r-marginLeft-1f6r7vd r-paddingTop-njp1lv IS2 S2"
    >
      VIDEO
    </div>
  </div>
</VideoLabel>
`;
